63: Fix no animation single product accordion and change icon on collapsed

--- a/themes/profumo-labo/_dev/css/theme/components/collapsed/_base.scss
+++ b/themes/profumo-labo/_dev/css/theme/components/collapsed/_base.scss
@@ -317,7 +317,7 @@
     }
 }
 
-.collapsing {
+.footer-container .collapsing {
     -webkit-transition: none;
     transition: none;
     display: none;
